# pdf-gesture-control

./: .gitignore  README.md  pyproject.toml
gesture_scroller/: gesture_capturer.py  global_gesture.py  globals.py  main.py  pdf_viewer.py
