[tool.poetry]
name = "gesture-scroller"
version = "0.1.0"
description = ""
authors = ["IvoDz <ivo.dz2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python-headless = "^4.9.0.80"
pymupdf = "^1.23.19"
pillow = "^10.2.0"
numpy = "^1.26.3"
tk = "^0.1.0"
mediapipe = "^0.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
